force-app/main/default/objects/FT_Products__c/FT_Products__c.object-meta.xml
<CustomObject>
    <label>FT-Products</label>
    <nameField>
        <label>FT-Products Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>FT-Products</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>