force-app/main/default/objects/FT_Products__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>T-Shirts</fullName>
            </value>
            <value>
                <fullName>Trousers</fullName>
            </value>
            <value>
                <fullName>Footwear</fullName>
            </value>
            <value>
                <fullName>Books</fullName>
            </value>
            <value>
                <fullName>Electronics</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>