force-app/main/default/objects/FT_Products__c/fields/featured__c.field-meta.xml
<CustomField>
    <fullName>featured__c</fullName>
    <defaultValue>false</defaultValue>
    <label>featured</label>
    <type>Checkbox</type>
</CustomField>