force-app/main/default/objects/FT_Products__c/fields/Image_Link2__c.field-meta.xml
<CustomField>
    <fullName>Image_Link2__c</fullName>
    <label>Image Link2</label>
    <type>Url</type>
</CustomField>