force-app/main/default/objects/FT_Products__c/fields/Image_Link3__c.field-meta.xml
<CustomField>
    <fullName>Image_Link3__c</fullName>
    <label>Image Link3</label>
    <type>Url</type>
</CustomField>