force-app/main/default/objects/FT_Products__c/fields/Image_Link4__c.field-meta.xml
<CustomField>
    <fullName>Image_Link4__c</fullName>
    <label>Image Link4</label>
    <type>Url</type>
</CustomField>