force-app/main/default/objects/FT_Products__c/fields/Product_Image2__c.field-meta.xml
<CustomField>
    <fullName>Product_Image2__c</fullName>
    <formula>IMAGE( Image_Link2__c ,  Name )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Image2</label>
    <type>Text</type>
</CustomField>