force-app/main/default/objects/FT_Products__c/fields/Product_Image3__c.field-meta.xml
<CustomField>
    <fullName>Product_Image3__c</fullName>
    <formula>IMAGE( Image_Link3__c , Name )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Image3</label>
    <type>Text</type>
</CustomField>