force-app/main/default/objects/FT_Products__c/fields/Product_Image4__c.field-meta.xml
<CustomField>
    <fullName>Product_Image4__c</fullName>
    <formula>IMAGE( Image_Link4__c ,  Name )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Image4</label>
    <type>Text</type>
</CustomField>